healthcare-plus/force-app/main/default/objects/User/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <externalId>true</externalId>
    <label>Employee Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>