healthcare-plus/force-app/main/default/objects/User/fields/Last_HIPPA_Training__c.field-meta.xml
<CustomField>
    <fullName>Last_HIPPA_Training__c</fullName>
    <label>Last HIPPA Training</label>
    <type>Date</type>
</CustomField>