healthcare-plus/force-app/main/default/objects/User/fields/Security_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Security_Clearance__c</fullName>
    <label>Security Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>System Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>