healthcare-plus/force-app/main/default/objects/User/fields/Shift_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Shift_Schedule__c</fullName>
    <label>Shift Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day Shift</fullName>
            </value>
            <value>
                <fullName>Night Shift</fullName>
            </value>
            <value>
                <fullName>Rotating</fullName>
            </value>
            <value>
                <fullName>On-Call</fullName>
            </value>
            <value>
                <fullName>Administrative Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>